# qdrant-interview-project

./: .gitignore  .pre-commit-config.yaml  API.md  ARCHITECTURE.md  COGNITIVE_MIRRORS.md  CURATED_WORDLIST.md  DEVELOPMENT.md  DEVELOPMENT_PLAN.md  MVP_REQUIREMENTS.md  PROJECT_STRUCTURE.md  README.md  TECHNICAL_SPEC.md  TESTING.md  crush.py  eval.py  pyproject.toml  requirements.txt
contexto/: __init__.py  cognitive_mirrors.py  contexto_api.py  llm_integration.py  solver.py  vector_db.py
scripts/: build_index.py  compare_wordlists.py  create_curated_wordlist.py  download_historical_solutions.py  run_test_with_docker.sh  solve_contexto.py  start_qdrant_docker.py  stop_qdrant_docker.py  test_pipeline.py  test_without_docker.py
tests/: __init__.py  conftest.py  test_cognitive_mirrors.py  test_contexto_api.py  test_curated_approach.py  test_mock_contexto_api.py  test_solver.py  test_vector_db.py  test_vector_db_search.py
tests/data/: small_word_list.txt
