[tool.poetry]
name = "contexto-crusher"
version = "0.1.0"
description = "An autonomous semantic sleuth that cracks Contexto.me in single‑digit guesses"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/yourusername/contexto-crusher"

[tool.poetry.dependencies]
python = "^3.10"
qdrant-client = "^1.6.0"
sentence-transformers = "^2.2.2"
playwright = "^1.38.0"
numpy = "^1.24.0"
tqdm = "^4.66.1"
click = "^8.1.7"
matplotlib = "^3.7.2"
pandas = "^2.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
pre-commit = "^3.3.3"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
